fix: label text did not break on smaller screen

--- a/docs/css/form.css
+++ b/docs/css/form.css
@@ -31,7 +31,6 @@
 
 .form-label {
     display: block;
-    white-space: nowrap;
     text-align: left;
     cursor: pointer;
 }
